v1.7.1 Alpha:
-------------
- Heavy engine independent code cleanups which will make CG more flexible for new game engines besides Commander Keen
- New GsLib will take more work at low level functions and will as wrapper for SDL and GUI elements
- Multiple selection should be fixed now.
- New Menu Multiple High
- Even more smooth effects readded
- More bug fixes
- New pump event concept will solve a lot of deadlocks we previously had on the android versions.

v1.6.5.5 Release:
-----------------
- Added Scrollbar for a bigger list of games
- Wormmoutch bites again!

v1.6.5.3 Beta:
--------------
- More effects readded
- Many bug fixes especially Keen 1,2 and 4

v1.6.5 Beta:
------------
- Internal Keen game resolution now selectable to 320x240 and 640x480
- Gems and keycards are now reput in the level when one of multiplayer keen dies, making levels finishable in such cases
- Full SDL 2.0 support
- Intro Screen added
- New Overlay theme for android 
- Terror in Space mod supported
- And a big bunch of bugs were resolve on the run

v1.6.1 Release:
---------------
- A lot of bug fixes the last had
- Keen can now stand on another keen in multiplayer mode

v1.6 Release:
-------------
- XML based Savegame states in both galaxy and vorticon engine which in future 
  will make those savegames more robust, when coming from older or newer versions. 
  This means hopefully, no more crashes in savegames.
- Up to four Players in Galaxy, with everyone having it's HUD
- The HUD are now a bit translucent by default
- Three new difficulty levels, making it six now...
- Some enemies have new colours depending on how you play Keen

v1.4.4 Release:
---------------
- More general bug fixes
- Some neat menu and dialog effects
- Now rending engine which drawing the game scene faster

v1.4.3 Release:
---------------
- Teleportation Fixes in Keen 8. No effect in Keen 6 but the mod was unplayable (thanks to arjwz)
- Carmack Unpack Fixes

v1.4.2 Release:
---------------